# cmd_vcf

./: .gitignore  .gitignore~  README.md  pyproject.toml
src/cmdvcf/: cmdvcf.py
