[project]
name = "cmdvcf"
version = "0.0.2"
authors = [
  { name="CMD", email="cmd@skane.se" },
]
description = "VCF manipulation tool that makes the vcf file compatible to coyote"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies", "optional-dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[project.urls]
Homepage = "https://github.com/Clinical-Genomics-Lund/cmd_vcf"
Issues = "https://github.com/Clinical-Genomics-Lund/cmd_vcf/issues"